# orbit

./: .claude-mcp-config.json  .env.example  .gitignore  APIS_IMPLEMENTATION_COMPLETE.md  BACKEND_BUILD_FIX.md  BUILD_FIXES_SUMMARY.md  CLAUDE.md  CORS_FINAL_FIX.md  CRITICAL_FIXES.md  DEBUG_INSTRUCTIONS.md  DIAGNOSTIC_REPORT_PROMPT_40.md  DOCKER_FIX_SUMMARY.md  ENV_CORS_FIX.md  FRONTEND_BUILD_FIX.md  FRONTEND_CSS_FIX.md  FRONTEND_IMPLEMENTATION_STATUS.md  INTERVIEWLIST_FIX_REPORT.md  JIRA_TRANSFORMATION_ANALYSIS.md  META_PROMPT.md  MIGRATION_SUCCESS.md  MODELS_SUMMARY.md  NAVIGATION_IMPLEMENTATION_REPORT.md  NAVIGATION_QUICKSTART.md  PERMISSION_FIX.md  PLAN.md  PROGRESS.md  PROMPTER_GUIDE.md  PROMPT_100_ALL_FIXED_QUESTIONS_WITH_OPTIONS.md  PROMPT_100_FIX_INVALID_MODEL_IDS.md  PROMPT_102_HIERARCHICAL_DRAFT_GENERATION.md  PROMPT_102_V2_INDIVIDUAL_CONTENT_GENERATION.md  PROMPT_103_IMPLEMENTATION_REPORT.md  PROMPT_104_IMPLEMENTATION_REPORT.md  PROMPT_104_RAG_SERVICES_DOCKER.md  PROMPT_105_DOCKER_CONSOLIDATION.md  PROMPT_106_OLLAMA_INTEGRATION.md  PROMPT_107_FIX_DRAFT_GENERATION.md  PROMPT_108_BACKGROUND_QUEUE.md  PROMPT_109_ERROR_DIALOG_CLOSED_QUESTIONS.md  PROMPT_110_RAG_EVOLUTION.md  (+130 more)
backend/: .env.example  MODELS_DOCUMENTATION.md  PROMPTER_FEATURE_FLAGS.md  alembic.ini  prometheus.yml  pyproject.toml  seed_laravel_specs.py  seed_nextjs_specs.py  seed_remaining_specs.py  setup_ab_experiment.py  test_ab_testing.py  test_batch_service.py  test_cache_redis.py  test_code_indexing.py  test_metrics.py  test_prompt_97_manual.py  test_provision_manual.sh  test_tracing.py
(+518 files in other folders)
